# dpdata

./: .buildinfo  .git-blame-ignore-revs  .git_archival.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  EFFICIENT_READING.md  MANIFEST.in  README.md  debug_ml.py  demo_efficient_reading.py  genindex.html  index.html  my.patch  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  schnet.db  search.html  searchindex.js  setup.py  tags  test.db  test_robustness.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  generic-issue.md  generic-issue.yml  request-for-help.md
.github/workflows/: benchmark.yml  docs.yml  mirror_gitee.yml  pub-pypi.yml  pyright.yml  test.yml  test_import.py  test_import.yml
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
_modules/: index.html
_modules/dpdata/: system.html
_static/: documentation_options.js
benchmark/: test_import.py
docs/: Makefile  cli.rst  conf.py  credits.rst  drivers.rst  environment.yml  formats.rst  index.rst  installation.md  make_format.py  minimizer.rst  minimizers.rst  plugin.md  requirements.txt  rtd_environment.yml  try_dpdata.rst
docs/nb/: try_dpdata.ipynb
docs/systems/: bond_order_system.md  index.rst  lmdb.md  mixed.md  multi.md  system.md
dpdata/: __about__.py  __init__.py  __main__.py  ase_calculator.py  bond_order_system.py  cli.py  constant.py  customsystem.py  data_type.py  driver.py  format.py  periodic_table.json  periodic_table.py  plugin.py  serialization.py  stat.py  system.py  unit.py  utils.py
dpdata/abacus/: md.py  relax.py  scf.py  stru.py
dpdata/amber/: mask.py  md.py  sqm.py
dpdata/ase/: db.py
dpdata/cp2k/: .___init__.py  cell.py  output.py  test.py
dpdata/deepmd/: .___init__.py  comp.py  hdf5.py  mixed.py  raw.py
dpdata/dftb_plus/: inout.py
dpdata/dftbplus/: output.py
dpdata/fhi_aims/: .___init__.py  output.py
dpdata/formats/: __init__.py
dpdata/gaussian/: .___init__.py  fchk.py  gjf.py  log.py
dpdata/gromacs/: .___init__.py  gro.py
dpdata/lammps/: .___init__.py  dump.py  lmp.py
dpdata/lmdb/: __init__.py  format.py
dpdata/md/: .___init__.py  msd.py  pbc.py  rdf.py  water.py
dpdata/openmx/: omx.py
dpdata/orca/: output.py
dpdata/plugins/: 3dmol.py  __init__.py  abacus.py  amber.py  ase.py  cp2k.py  deepmd.py  dftb_plus.py  dftbplus.py  fennol.py  fhi_aims.py  gaussian.py  gromacs.py  lammps.py  list.py  lmdb.py  n2p2.py  np2p.py  openmx.py  orca.py  psi4.py  pwmat.py  pymatgen.py  qe.py  rdkit.py  schnetpack.py  siesta.py  vasp.py  vasp_deltaspin.py  xyz.py
dpdata/psi4/: input.py  output.py
dpdata/pwmat/: atomconfig.py  movement.py
dpdata/pwscf/: scf.py  traj.py
dpdata/pymatgen/: molecule.py  structure.py
dpdata/qe/: pwmd.py  scf.py  traj.py
dpdata/rdkit/: mol2.py  sanitize.py  utils.py
dpdata/siesta/: aiMD_output.py  output.py
dpdata/vasp/: .___init__.py  outcar.py  poscar.py  xml.py
dpdata/vasp_deltaspin/: outcar.py  poscar.py
dpdata/xyz/: gap_xyz.py  quip_gap_xyz.py  xyz.py
plugin_example/: README.md  pyproject.toml  setup.py
plugin_example/dpdata_random/: __init__.py
skills/dpdata-cli/: README.md  SKILL.md
skills/dpdata-driver/: SKILL.md
skills/dpdata-minimizer/: SKILL.md
skills/dpdata-plugin/: SKILL.md
tests/: .coverage  POSCAR  comp_sys.py  computed_structure_entry.json  context.py  data_foo.h5  test_abacus_deltaspin.py  test_abacus_md.py  test_abacus_pw_scf.py  test_abacus_relax.py  test_abacus_spin.py  test_abacus_stru_dump.py  test_amber_md.py  test_amber_nonorthogonal.py  test_amber_nonorthogonal_integration.py  test_amber_sqm.py  test_append.py  test_ase_traj.py  test_bond_order_system.py  test_cell_to_low_triangle.py  test_cli.py  test_corr.py  test_cp2k_2025_output.py  test_cp2k_aimd_output.py  test_cp2k_output.py  test_custom_data_type.py  test_customsystem.py  test_deepmd.py  test_deepmd_comp.py  test_deepmd_hdf5.py  test_deepmd_mixed.py  test_deepmd_mixed_unlabeled.py  test_deepmd_raw.py  test_deepmd_spin.py  test_dftb_plus.py  test_dftbplus.py  test_dftbplus_6atoms.py  test_dump_to_system.py  test_elements_index.py  test_empty.py  (+92 more)
tests copy/: test.py
tests/__pycache__/: test_system_apply_pbc.cpython-37.pyc.140049930640432  test_to_ase.cpython-37.pyc.140049930640432
tests/abacus.md/: INPUT  STRU  Si_coord  Si_force  Si_virial  water_coord  water_force  water_virial
tests/abacus.md.newversion/: INPUT  STRU  coord.ref  force.ref  virial.ref
tests/abacus.md.noforce/: INPUT
tests/abacus.md.nostress/: INPUT  STRU  Si_coord  Si_force
tests/abacus.md.unconv/: INPUT  STRU  water_coord  water_force  water_virial
tests/abacus.relax/: INPUT  INPUT.spin  STRU  STRU.Si  STRU.spin  coord.ref  force.ref  force.v341.ref  stress.ref  stress.v341.ref  virial.ref
tests/abacus.relax.readFromSTRUIOND/: INPUT  STRU  cells.npy  coords.npy  energies.npy  forces.npy  stress.npy  virials.npy
tests/abacus.scf/: C_ONCV_PBE-1.0.upf  INPUT  INPUT.ch4-noforcestress  INPUT.fail  INPUT.ok  KPT.ch4  STRU.ch4  ch4_coord  ch4_force  ch4_virial  stru.ref  stru_test
tests/abacus.scf.deltaspin/: INPUT
tests/abacus.spin/: INPUT.md  INPUT.relax  INPUT.scf  INPUT.scf.nspin2  STRU  STRU.spin
tests/amber/: .02_Heat.mden.swp  02_Heat.mden  02_Heat.mdfrc  02_Heat.nc  02_Heat.parm7  methane.mol  sqm.in  sqm_forces.out  sqm_no_forces.out  (+1 more)
tests/plugin/: pyproject.toml
tests/plugin/dpdata_plugin_test/: __init__.py
(+10246 files in other folders)
