[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdata"
dynamic = ["version"]
description = "Manipulating data formats of DeePMD-kit, VASP, QE, PWmat, and LAMMPS, etc."
authors = [
  {name = "DeepModeling"},
  {name = "Han Wang", email = "wang_han@iapcm.ac.cn"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    'numpy>=1.14.3',
    'monty',
    'scipy',
    'h5py',
    'wcmatch',
    'importlib_metadata>=1.4; python_version < "3.8"',
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["lammps", "vasp", "deepmd-kit"]

[project.urls]
Homepage = "https://github.com/deepmodeling/dpdata"
documentation = "https://docs.deepmodeling.com/projects/dpdata"
repository = "https://github.com/deepmodeling/dpdata"

[project.entry-points.console_scripts]
dpdata = "dpdata.cli:dpdata_cli"

[project.optional-dependencies]
ase = ['ase']
amber = [
    'parmed; python_version >= "3.8"',
    'parmed<4; python_version < "3.8"',
]
pymatgen = ['pymatgen']
docs = [
    'sphinx',
    'recommonmark',
    'sphinx_rtd_theme>=1.0.0rc1',
    'numpydoc',
    'm2r2',
    'deepmodeling-sphinx>=0.1.1',
    'sphinx-argparse',
]

[tool.setuptools.packages.find]
include = ["dpdata*"]

[tool.setuptools.package-data]
dpdata = ['*.json']

[tool.setuptools_scm]
write_to = "dpdata/_version.py"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py37"
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
    "UP", # pyupgrade
    "I", # isort
]
ignore = [
    "E501", # line too long
    "F841", # local variable is assigned to but never used
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D413", # missing blank line after last section
    "D416", # section name should end with a colon
    "D203", # 1 blank line required before class docstring
    "D107", # missing docstring in __init__
    "D213", # multi-line docstring summary should start at the second line
    "D100", # TODO: missing docstring in public module
    "D101", # TODO: missing docstring in public class
    "D102", # TODO: missing docstring in public method
    "D103", # TODO: missing docstring in public function
    "D104", # TODO: missing docstring in public package
    "D105", # TODO: missing docstring in magic method
    "D205", # 1 blank line required between summary line and description
    "D401", # TODO: first line should be in imperative mood
    "D404", # TODO: first word of the docstring should not be This
]
ignore-init-module-imports = true
